MESSAGE( "-- Configuring examples:" )
FILE ( GLOB EXAMPLE_DIRS RELATIVE "${CRIMILD_EXAMPLES_SOURCE_DIR}/examples" * )
FOREACH( EXAMPLE_DIR ${EXAMPLE_DIRS} )
	IF ( NOT ${EXAMPLE_DIR} MATCHES "CMakeFiles" )
		IF ( IS_DIRECTORY ${CRIMILD_EXAMPLES_SOURCE_DIR}/examples/${EXAMPLE_DIR} )
			ADD_SUBDIRECTORY( ${EXAMPLE_DIR} )
		ENDIF ( IS_DIRECTORY ${CRIMILD_EXAMPLES_SOURCE_DIR}/examples/${EXAMPLE_DIR} )
	ENDIF ( NOT ${EXAMPLE_DIR} MATCHES "CMakeFiles" )
ENDFOREACH()

